<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/rounded_background"
    android:backgroundTint="@color/on_primary"
    android:layout_margin="@dimen/small_margin">
    <TextView
        style="@style/WidgetTitleTextView"
        android:text="@string/widget_title"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/default_margin">
        <ImageView
            android:contentDescription="@string/bottom_sheet_battery_temperature_title"
            style="@style/DefaultShapeableImageView"
            android:backgroundTint="@color/on_primary"
            android:src="@drawable/ic_temperature"
            android:layout_marginStart="@dimen/default_margin"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/bottom_sheet_battery_temperature_title"/>
        <TextView
            android:id="@+id/textview_battery_temperature_widget"
            style="@style/DefaultTextView"
            tools:text="34.8ºC"
            android:layout_marginStart="@dimen/small_margin"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        >
        <ImageView
            android:contentDescription="@string/bottom_sheet_battery_voltage_title"
            style="@style/DefaultShapeableImageView"
            android:backgroundTint="@color/on_primary"
            android:src="@drawable/ic_voltage"
            android:layout_marginStart="@dimen/default_margin"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/bottom_sheet_battery_voltage_title"/>
        <TextView
            android:id="@+id/textview_battery_voltage_widget"
            style="@style/DefaultTextView"
            tools:text="4.0V"
            android:layout_marginStart="@dimen/small_margin"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginBottom="@dimen/default_margin">
        <ImageView
            android:contentDescription="@string/bottom_sheet_battery_temperature_title"
            style="@style/DefaultShapeableImageView"
            android:backgroundTint="@color/on_primary"
            android:src="@drawable/ic_health"
            android:layout_marginStart="@dimen/default_margin"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/bottom_sheet_battery_health_title"/>
        <TextView
            android:id="@+id/textview_battery_health_widget"
            style="@style/DefaultTextView"
            tools:text="Good"
            android:layout_marginStart="@dimen/small_margin"/>
    </LinearLayout>

</LinearLayout>